--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon homepage</title>
 </head>
 
 <body>
@@ -12,6 +12,16 @@
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
+
+                <li>
+                    <a href="#Learning">Learning</a>
+                </li>
+                <li>
+                    <a href="Company">Company</a>
+                </li>
+                <li>
+                    <a href="Customers">Customers</a>
+                </li>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
@@ -24,17 +34,21 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
+    <div class="hero">
+        <h1>About Us</h1>
+        <p id="intro"><strong>We are a company dedicated to help people who wants to make their website to become more searchable on internet <br>so they can promote their business by having strong marketing</br>, better search engine optimization, attracting potential clinets, and so on.</strong></p>
+        
+    </div>
     <div class="content">
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="An image representing a well-organized desktop" /> <!--giving a description for this image-->
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="An image representing a well-organized desktop" /> <!--giving a description for this image representing a desktop-->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="image representing a person using a cellphone and laptop for work." />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="image representing a person using a cellphone and laptop for work." /> <!-- giving a description of someone using devices to give reputation for the company-->
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -65,7 +79,7 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="image representing icon for cost management."></img>
+            <img src="./assets/images/cost-management.png" alt="image representing icon for cost management.">
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
